--- a/app/views/hour_types/_hour_type.html.erb
+++ b/app/views/hour_types/_hour_type.html.erb
@@ -11,4 +11,4 @@
 		<%= f.error_messages %>
 	</p>
 <% end -%>
-<%= link_to "Back", hour_types_path %>
+<%= link_to "Hour Type list", hour_types_path %>
