--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -38,5 +38,5 @@
 <% end %>
 
 <%= link_to 'Show', user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'User list', users_path %>
 
