--- a/app/views/time_entries/_edit_form.html.erb
+++ b/app/views/time_entries/_edit_form.html.erb
@@ -2,8 +2,8 @@
 	<%= hidden_field_tag :user_id, params[:user_id] %>
 	<%= f.label :activity %>
 	<%= collection_select(:time_entry, :activity_id, @activities, :id, :name) %>
-	<%= f.label :hour_type %>
-	<%= collection_select(:time_entry, :hour_type_id, HourType.all(:order => "default_hour_type DESC"), :id, :name) %>
+	<%# f.label :hour_type %>
+	<%# collection_select(:time_entry, :hour_type_id, HourType.all(:order => "default_hour_type DESC"), :id, :name) %>
 	<%= f.label :hours, "Hours" %>
 	<%= f.text_field :hours, :size => 4 %>
 	<%= f.label :notes, "Notes" %>
