--- a/app/views/reports/_search_advanced_form.html.erb
+++ b/app/views/reports/_search_advanced_form.html.erb
@@ -52,30 +52,30 @@
             </tr>
             <tr> <td></td></tr>
             <tr>
-              <td><%= label_tag "tag_type_id","Category"%></td>
-              <td><%= select_tag "tag_type_id", empty_option("All") + options_from_collection_for_select(TagType.all, :id, :name, params[:tag_type_id].to_i) %></td>
+              <td><%= label_tag "tag_type","Category"%></td>
+              <td><%= select_tag "tag_type", empty_option("All") + options_from_collection_for_select(TagType.all, :id, :name, params[:tag_type].to_i) %></td>
             </tr>
             <tr>
               <% if tag_type %>
-                <td><%= label_tag "tag_id",'Tag'%></td>
-                <td><%= select_tag "tag_id", empty_option("All") + options_from_collection_for_select(tag_type.tags, :id, :name, params[:tag_id].to_i) %></td>
+                <td><%= label_tag "tag",'Tag'%></td>
+                <td><%= select_tag "tag", empty_option("All") + options_from_collection_for_select(tag_type.tags, :id, :name, params[:tag].to_i) %></td>
               <% else %>
-                <td><%= label_tag "tag_id","Tag", :class => 'disabled' %></td>
-                <td><%= select_tag "tag_id", empty_option("-----------"), {:disabled => true} %></td>
+                <td><%= label_tag "tag","Tag", :class => 'disabled' %></td>
+                <td><%= select_tag "tag", empty_option("-----------"), {:disabled => true} %></td>
               <% end %>
             </tr>
             <tr> <td></td></tr>
             <tr>
-              <td><%= label_tag "customer_id"%></td>
-              <td><%= select_tag "customer_id", empty_option("All") + options_from_collection_for_select( Customer.all, 'id', 'name', params[:customer_id].to_i  ) %></td>
+              <td><%= label_tag "customer"%></td>
+              <td><%= select_tag "customer", empty_option("All") + options_from_collection_for_select( Customer.all, 'id', 'name', params[:customer].to_i  ) %></td>
             </tr>
             <tr>
               <% if customer %>
-                <td><%= label_tag "project_id",'Project'%></td>
-                <td><%= select_tag "project_id", empty_option("All") + options_from_collection_for_select(customer.projects, :id, :name, @project.try("id")) %></td>
+                <td><%= label_tag "project",'Project'%></td>
+                <td><%= select_tag "project", empty_option("All") + options_from_collection_for_select(customer.projects, :id, :name, @project.try("id")) %></td>
               <% else %>
-                <td><%= label_tag "project_id",'Project', :class => 'disabled' %></td>
-                <td><%= select_tag "project_id", empty_option("-----------"), {:disabled => true} %></td>
+                <td><%= label_tag "project",'Project', :class => 'disabled' %></td>
+                <td><%= select_tag "project", empty_option("-----------"), {:disabled => true} %></td>
               <% end %>
             </tr>
           </table>
