--- a/app/views/month/calender.html.erb
+++ b/app/views/month/calender.html.erb
@@ -7,7 +7,7 @@
 <% form_tag 'calender', :method => 'get', :id => 'calender_form' do %>
   <p>
     <label for="date">Period</label>
-    <%= date_select "calender", "date", {:start_year => Date.today.year - 5 , :end_year => Date.today.year + 1, :discard_day => true} %>
+    <%= date_select "calender", "date", {:start_year => Date.today.year - 5 , :end_year => Date.today.year + 1, :discard_day => true, :default => @day} %>
   </p>
   <noscript><div><%= submit_tag 'View' %></div></noscript>
 <% end %>
