--- a/app/views/month/listing.html.erb
+++ b/app/views/month/listing.html.erb
@@ -7,7 +7,7 @@
 
     <p>
     <label for="date">Period</label>
-    <%= date_select "calender", "date", {:start_year => Date.today.year - 5 , :end_year => Date.today.year + 1, :discard_day => true} %>
+    <%= date_select "calender", "date", {:start_year => Date.today.year - 5 , :end_year => Date.today.year + 1, :discard_day => true, :default => @day} %>
   </p>
 
 <noscript><div><%= submit_tag 'View' %></div></noscript>
