Refactoring of time entries view. Time entries now displayed in a separate table for each day. Removed activities from Admin tab.

--- a/app/views/time_entries/edit.html.erb
+++ b/app/views/time_entries/edit.html.erb
@@ -2,7 +2,7 @@
 <% form_for [@user, @time_entry] do |f| -%>
 	<p>
 		<%= f.label :activity %>
-		<%= collection_select(:time_entry, :activity_id, @activities, :id, :name) %>
+		<%= collection_select(:time_entry, :activity_id, @activities, :id, :customer_project_name) %>
 	</p>
 	<p>
 	<%= f.label :hour_type %>
