--- a/app/views/time_entries/_new_entry.html.erb
+++ b/app/views/time_entries/_new_entry.html.erb
@@ -1,21 +1,30 @@
-<div id="new_entry_form">
-	<p>
-		<% remote_form_for [@user, @time_entry] do |f| -%>
-			<%= f.hidden_field :date %>
-			<%= f.label :activity %>
-			<%= collection_select(:time_entry, :activity_id, @activities, :id, :name) %>
-			<%= f.label :hour_type %>
-			<%= collection_select(:time_entry, :hour_type_id, HourType.all(:order => "default_hour_type DESC"), :id, :name) %>
-			<%= f.label :hours %>
-			<%= f.text_field :hours, :size => 4 %>
-			<%= f.label :notes %>
-			<%= f.text_field :notes, :size => 20 %>
-			<%= f.submit "Submit" %>
-			<%= button_to_function "Cancel" do |page|
-				page.select(".new_time_entry_link").each { |element| element.show }
-				page.remove "new_entry_form"
-			end	%>
-		<% end -%>
-		<div id="new_time_entry_error_messages"></div>
-	</p>
+<div id="new_time_entry">
+	<% remote_form_for [@user, @time_entry] do |f| -%>
+		<%= f.hidden_field :date %>
+		<table id="new_entry_form" style="width: 100%; background-color: #eeeeee">
+			<tr>
+				<td><%= f.label :activity %></td>
+				<td><%= f.label :hour_type %></td>
+				<td><%= f.label :hours %></td>
+				<td><%= f.label :notes %></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td><%= collection_select(:time_entry, :activity_id, @activities, :id, :customer_project_name) %></td>
+				<td><%= collection_select(:time_entry, :hour_type_id, HourType.all(:order => "default_hour_type DESC"), :id, :name) %></td>
+				<td><%= f.text_field :hours, :size => 4 %></td>
+				<td><%= f.text_field :notes, :size => 40 %></td>
+				<td><%= f.submit "Submit" %></td>
+				<td><%= button_to_function "Cancel" do |page|
+					page.select(".new_time_entry_link").each { |element| element.show }
+					page.remove "new_time_entry"
+				end	%></td>
+		 	</tr>
+			<tr>
+				<div id="new_time_entry_error_messages"></div>
+			</tr>
+		</table>
+	<% end -%>
+	<br/>
 </div>
