--- a/app/views/time_entries/_time_entry.html.erb
+++ b/app/views/time_entries/_time_entry.html.erb
@@ -1,11 +1,12 @@
-<div id='<%= "show_#{time_entry.id}" %>' class="time_entry">						
-	<%= link_to time_entry.activity.name, activity_path(time_entry.activity) %> 
-	<%= time_entry.hours > 1.0 ? "#{time_entry.hours} hours" : "#{time_entry.hours} hour" %> (<%= time_entry.hour_type.name %>). 
-	<i><%= time_entry.notes %></i>
-	<%= link_to_remote(image_tag("pencil.png"), { :update => "show_#{time_entry.id}", :url => { :action => :edit, :user_id => @user.id, :id => time_entry.id }, :method => :get }, 
-		:href => edit_user_time_entry_path(@user, time_entry), :method => :get) %>
-	<% form_remote_tag :url => user_time_entry_path(@user, time_entry), :confirm => "Are you sure?",
+<tr id='<%= "show_#{time_entry.id}" %>' class="time_entry">						
+	<td width="25%"><%= link_to truncate(time_entry.activity.customer_project_name), activity_path(time_entry.activity) %></td> 
+	<td width="15%"><%= truncate(time_entry.hour_type.name, :length => 15) %></td> 
+	<td width="5%"><%= time_entry.hours %></td> 
+	<td width="45%"><%= time_entry.notes %></td>
+	<td width="5%"><%= link_to_remote(image_tag("pencil.png"), { :url => { :action => :edit, :user_id => @user.id, :id => time_entry.id }, :method => :get }, 
+		:href => edit_user_time_entry_path(@user, time_entry), :method => :get) %></td>
+	<td width="5%"><% form_remote_tag :url => user_time_entry_path(@user, time_entry), :confirm => "Are you sure?",
 		:html => { :action => confirm_destroy_user_time_entry_path(@user, time_entry, :date => @date), :method => :delete, :class => "delete_form" }  do %>
 		<%= image_submit_tag "delete.png" %>
-<% end -%>
-</div>
+		<% end -%></td>
+</tr>
