--- a/app/views/reports/details.html.erb
+++ b/app/views/reports/details.html.erb
@@ -1,7 +1,7 @@
 
 <h1>Details</h1>
 
-<%#= render :partial => 'sub_menu' -%>
+<%= render :partial => 'sub_menu' -%>
 
 <table>
   <tr><td>User     </td><td><b><%= @user.fullname %> </b></td></tr>
