--- a/app/views/time_entries/_time_entries.html.erb
+++ b/app/views/time_entries/_time_entries.html.erb
@@ -1,15 +1,8 @@
 <% unless time_entries.empty? %>
 	<table width="100%" id='<%= "#{day}_time_entries" %>'>
-		<tr>
-			<th>Activity</th>
-			<th>Hour Type</th>
-			<th>Hours</th>
-			<th>Notes</th>
-			<th>Edit</th>
-			<th>Delete</th>
-		</tr>
+			<%= render :partial => "time_entries_table_header" %>
 		<% time_entries.each do |te| %>
-			<%= render :partial => "time_entry", :object => te %>
+			<%= render :partial => "show_time_entry", :locals => { :time_entry => te } %>
 		<% end -%>
 	</table>
 <% end -%>
