Removed functionality for jumping to a selected date in time entry index. Refactored previous/next navigation to be more consistent across the application (css classes added)

--- a/app/views/holidays/vacation.html.erb
+++ b/app/views/holidays/vacation.html.erb
@@ -8,10 +8,12 @@
 <h1>Vacation</h1>
 <%= render :partial => 'sub_menu' -%>
 
-<div id="navigation" style="text-align:center;">
-<h4><%= link_to '<<', :action => 'vacation', :date => @day << 1 %>
-<span style="display:inline-block; width:9em;"><%= @day.strftime('%B %Y') %></span>
-<%= link_to '>>', :action => 'vacation', :date => @day >> 1 %></h4>
+<div class="navigation">
+	<h4>
+		<%= link_to '<<', :action => 'vacation', :date => @day << 1 %>
+		<span><%= @day.strftime('%B %Y') %></span>
+		<%= link_to '>>', :action => 'vacation', :date => @day >> 1 %>
+	</h4>
 </div>
 
 <hr/><br/>
