--- a/app/views/time_entries/_time_entries_with_form.html.erb
+++ b/app/views/time_entries/_time_entries_with_form.html.erb
@@ -3,13 +3,13 @@
 	<table width="100%" id='<%= "#{day}_time_entries" %>'>
 		<%= render :partial => "time_entries_table_header" %>   		
 		<% time_entries.each do |te| %>
-			<% if @editing_id and @editing_id == te.id -%>
+			<% if @time_entry.id && @time_entry.id == te.id -%>
 				<%= render :partial => "time_entry", :locals => { :f => f, :time_entries => time_entries, :day => day } %>
 			<% else -%>
 				<%= render :partial => "show_time_entry", :locals => { :in_form => "true", :time_entry => te } %>
 			<% end -%>
 		<% end -%>
-		<% if @new -%>
+		<% unless @time_entry.id -%>
 			<%= render :partial => "time_entry", :locals => { :f => f, :time_entries => time_entries, :day => day } %>
 		<% end -%>
 	</table>
