changed layout for project -> add activity, and linked the main menu to vacation instead of houlidays

--- a/app/views/holidays/_sub_menu.html.erb
+++ b/app/views/holidays/_sub_menu.html.erb
@@ -1,5 +1,5 @@
 <div id="nav">
-      <%= link_to "Holidays", :action => :index %> |
-      <%= link_to "Vacation", :action => :vacation %>
+  <%= link_to "Vacation", :action => :vacation %> |
+  <%= link_to "Official Holidays", :action => :holiday %>
 </div>
 <br/>
