--- a/app/views/tag_types/index.html.erb
+++ b/app/views/tag_types/index.html.erb
@@ -2,7 +2,7 @@
 <p class="error"><%= flash[:error] %></p>
 <h1>Categories</h1>
 
-<%= render :partial => 'activities/sub_menu', :locals => { :tag_types => @tag_types } -%>
+<%= render :partial => 'customers/sub_menu', :locals => { :tag_types => @tag_types } -%>
 <br/>
 
 <table>
