--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -1,2 +1,3 @@
-<%= link_to "Users", users_path %>
-<%= link_to "Hour Types", hour_types_path %>
+<%= link_to "Users", users_path %> |
+<%= link_to "Hour Types", hour_types_path %> |
+<%= link_to "Activity Templates", activities_path %>
