--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing customers</h1>
 
-<%= render :partial => 'activities/sub_menu', :locals => { :tag_types => @tag_types } -%>
+<%= render :partial => 'sub_menu', :locals => { :tag_types => @tag_types } -%>
 
  <p class="notice"><%= flash[:notice] %></p>
  <p class="error"><%= flash[:error] %></p>
