--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -20,6 +20,8 @@
 					<span id='<%= "#{day}_total" %>'>
 						<b><%= TimeEntry.sum_hours_for_user_and_date(@user.id, @date.+(index)) %></b>
 					 </span>
+					<label id='<%= "#{day}_expected_label" %>' for='<%= "#{day}_expected" %>'>Expected</label>
+					<b><%= Holiday.expected_on_day(@date.+(index)) %></b>
 					<%= link_to_remote("New", { :url => { :action => :new, :user_id => @user.id, :date => @date.+(index), :day => day }, :method => :get }, 
 					:href => new_user_time_entry_path(@user, :date => @date.+(index)), :id => "#{day}_new_time_entry_link" ,  :class => "new_time_entry_link") %> 
 				</div>
