changed review -> listing to prawn report

--- a/app/views/holidays/_sub_menu.html.erb
+++ b/app/views/holidays/_sub_menu.html.erb
@@ -1,5 +1,5 @@
 <div id="nav">
   <%= link_to "Vacation", :action => :vacation %> |
-  <%= link_to "Official Holidays", :action => :holiday %>
+  <%= link_to "Public Holidays", :action => :holiday %>
 </div>
 <br/>
